--- a/FortiGate/AvailabilityZones/Active-Passive-ELB-ILB-AZ/azure-pipelines.yml
+++ b/FortiGate/AvailabilityZones/Active-Passive-ELB-ILB-AZ/azure-pipelines.yml
@@ -34,6 +34,7 @@ trigger:
   branches:
     include:
     - main
+    - dev
   paths:
     exclude:
     - FortiGate/AvailabilityZones/Active-Passive-ELB-ILB-AZ/*.md
