Spring 2021 updates - new marketplace templates

--- a/FortiGate/A-Single-VM/azure-pipelines.yml
+++ b/FortiGate/A-Single-VM/azure-pipelines.yml
@@ -6,12 +6,25 @@ pool:
   demands: azureps
 
 steps:
+
+- task: DownloadSecureFile@1
+  name: sshkey
+  displayName: 'Download SSH private key'
+  inputs:
+    secureFile: 'azure-devops-ssh'
+
+- task: DownloadSecureFile@1
+  name: sshkeypub
+  displayName: 'Download SSH public key'
+  inputs:
+    secureFile: 'azure-devops-ssh-pub'
+
 - task: AzurePowerShell@5
   displayName: 'Running tests'
   inputs:
     azureSubscription: 'AzureSubscription'
     ScriptPath: 'FortiGate/A-Single-VM/test/invokePester.ps1'
-    ScriptArguments: '-templatename FortiGate/A-Single-VM'
+    ScriptArguments: '-templatename FortiGate/A-Single-VM -sshkey $(sshkey.secureFilePath) -sshkeypub $(sshkeypub.secureFilePath)'
     azurePowerShellVersion: LatestVersion
     pwsh: true
 
