--- a/FortiGate/Terraform/VNET-Peering/terraform/.gitignore
+++ b/FortiGate/Terraform/VNET-Peering/terraform/.gitignore
@@ -24,6 +24,7 @@ override.tf.json
 # Include override files you do wish to add to version control using negated pattern
 #
 # !example_override.tf
+.terraform.lock.hcl
 
 # Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
 # example: *tfplan*
