--- a/FortiGate/Active-Active-ELB-ILB/azure-pipelines.yml
+++ b/FortiGate/Active-Active-ELB-ILB/azure-pipelines.yml
@@ -6,12 +6,24 @@ pool:
   demands: azureps
 
 steps:
+- task: DownloadSecureFile@1
+  name: sshkey
+  displayName: 'Download SSH private key'
+  inputs:
+    secureFile: 'azure-devops-ssh'
+
+- task: DownloadSecureFile@1
+  name: sshkeypub
+  displayName: 'Download SSH public key'
+  inputs:
+    secureFile: 'azure-devops-ssh-pub'
+
 - task: AzurePowerShell@5
   displayName: 'Running tests'
   inputs:
     azureSubscription: 'AzureSubscription'
     ScriptPath: 'FortiGate/Active-Active-ELB-ILB/test/invokePester.ps1'
-    ScriptArguments: '-templatename FortiGate/Active-Active-ELB-ILB'
+    ScriptArguments: '-templatename FortiGate/Active-Active-ELB-ILB -sshkey $(sshkey.secureFilePath) -sshkeypub $(sshkeypub.secureFilePath)'
     azurePowerShellVersion: LatestVersion
     pwsh: true
 
